tests/baselines/reference/nodeModulesAllowJsTopLevelAwait(module=nodenext).errors.txt
subfolder/index.js(2,11): error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
subfolder/index.js(4,5): error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.


==== subfolder/index.js (2 errors) ====
    // cjs format file
    const x = await 1;
              ~~~~~
!!! error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1309: The current file is a CommonJS module and cannot use 'await' at the top level.
==== index.js (0 errors) ====
    // esm format file
    const x = await 1;
    export {x};
    for await (const y of []) {}
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }